--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,15 @@
     <string name="get_started">You don\'t have any tasks now</string>
     <string name="add_first_task">Get started</string>
     <string name="add_tasks">New</string>
+    <string name="insights">Insights</string>
+    <string name="heading">Hey there!</string>
+    <string name="today">Today</string>
+    <string name="yesterday">Yesterday</string>
+    <string name="tomorrow">Tomorrow</string>
+
+   <plurals name="tasks_subheading">
+       <item quantity="one">You have %d task scheduled</item>
+       <item quantity="other">You have %d tasks scheduled</item>
+   </plurals>
+
 </resources>
